--- a/.github/workflows/automatically_call-deploy-prod.yml
+++ b/.github/workflows/automatically_call-deploy-prod.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Check if Solution.xml exists
         run: |
-          if [ -f "solutions/${{ inputs.solution_name }}/Other/Solution.xml" ]; then
+          if [ -f "out/solutions/${{ inputs.solution_name }}/Other/Solution.xml" ]; then
             echo "Solution.xml exists."
           else
             echo "Solution.xml does not exist."
@@ -63,7 +63,7 @@ jobs:
       - name: Extract solution name from Solution.xml
         id: get-solution-name
         run: |
-          SOLUTION_NAME=$(xmllint --xpath "string(//UniqueName)" "solutions/${{ inputs.solution_name }}/Other/Solution.xml")
+          SOLUTION_NAME=$(xmllint --xpath "string(//UniqueName)" "out/solutions/${{ inputs.solution_name }}/Other/Solution.xml")
           echo "Solution Name: $SOLUTION_NAME"
           echo "solution_name=$SOLUTION_NAME" >> $GITHUB_OUTPUT
 
